release-1.1/_sources/index.rst.txt
.. Open OnDemand documentation master file, created by
   sphinx-quickstart on Thu Mar  9 18:18:09 2017.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Welcome to Open OnDemand's documentation!
=========================================

.. toctree::
   :maxdepth: 2
   :caption: Contents

   about

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   installation
   install-desktops
   updating

.. toctree::
   :maxdepth: 2
   :caption: Tutorials

   add-jupyter

.. toctree::
   :maxdepth: 2
   :caption: Components

   infrastructure
   applications

.. toctree::
   :maxdepth: 2
   :caption: Resources

   user-documentation
   app-development


.. toctree::
   :maxdepth: 2
   :caption: Release Notes

   release-notes/v1.1-release-notes
   release-notes/v1.0-release-notes
