release-1.3/_sources/index.rst.txt
.. Open OnDemand documentation master file, created by
   sphinx-quickstart on Thu Mar  9 18:18:09 2017.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

Open OnDemand
=============

`Website`_ | `Mailing list`_ | `GitHub`_

.. toctree::
   :maxdepth: 2
   :caption: Contents

   about

.. toctree::
   :maxdepth: 2
   :caption: Getting Started

   installation
   enable-desktops
   install-ihpc-apps
   authentication

.. toctree::
   :maxdepth: 2
   :caption: Components

   infrastructure
   applications

.. toctree::
   :maxdepth: 2
   :caption: Resources

   user-documentation
   app-development


.. toctree::
   :maxdepth: 2
   :caption: Release Notes

   release-notes/v1.3-release-notes
   release-notes/v1.2-release-notes
   release-notes/v1.1-release-notes
   release-notes/v1.0-release-notes

.. _website: https://osc.github.io/Open-OnDemand/
.. _mailing list: https://lists.osu.edu/mailman/listinfo/ood-users
.. _github: https://github.com/OSC/Open-OnDemand
